# ner-eval-dashboard

./: .gitignore  Dockerfile  README.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
ner_eval_dashboard/: __init__.py  app.py  cache.py  cli.py  datamodels.py  predictor_mixins.py  section.py  tokenizer.py
ner_eval_dashboard/assets/: components.css
ner_eval_dashboard/component/: __init__.py  base.py  dropout_robustness.py  examples.py  explainaboard.py  f1_metrics.py  per_token_stats.py  text_flint.py
ner_eval_dashboard/dataset/: __init__.py  base.py  flair.py
ner_eval_dashboard/predictor/: __init__.py  base.py  flair.py
ner_eval_dashboard/utils/: __init__.py  constants.py  dash.py  hash.py  logging.py  metrics.py  register.py  table.py
tests/: test_dataset_conversions.py  test_error_examples.py  test_flair_dataset.py  test_flair_predictor.py  test_model_conversion.py  test_predictor.py  test_utils.py
tests/data/column/: eng.testa  eng.testb  eng.train
